--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "web3modal": "1.9.5"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.2",
-    "eslint": "8.10.0",
-    "eslint-config-airbnb": "19.0.4",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.1.0",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.29.3",
-    "eslint-plugin-react-hooks": "4.3.0",
-    "postcss": "8.4.7",
-    "tailwindcss": "3.0.23"
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "postcss": "^8.4.7",
+    "tailwindcss": "^3.0.23"
   }
 }
